[MAPSME-4832] [ios] Added accessibility identifiers.

--- a/iphone/Maps/Classes/CustomAlert/DefaultAlert/MWMDefaultAlert.xib
+++ b/iphone/Maps/Classes/CustomAlert/DefaultAlert/MWMDefaultAlert.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2048" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -63,6 +63,7 @@
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAg-cp-4Ms" userLabel="left">
                             <rect key="frame" x="0.0" y="95" width="140" height="44"/>
+                            <accessibility key="accessibilityConfiguration" identifier="cancelButton"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="140" id="4bW-b0-naB"/>
                                 <constraint firstAttribute="height" constant="44" id="RRQ-jI-El3"/>
@@ -95,6 +96,7 @@
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSB-i6-pEP" userLabel="right">
                             <rect key="frame" x="140" y="95" width="140" height="44"/>
+                            <accessibility key="accessibilityConfiguration" identifier="OKButton"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="140" id="C3i-gd-pxv"/>
                                 <constraint firstAttribute="height" constant="44" id="dta-cI-rDi"/>
