--- a/iphone/Maps/UI/PlacePage/PlacePageLayout/PlacePageView/MWMPPView.xib
+++ b/iphone/Maps/UI/PlacePage/PlacePageLayout/PlacePageView/MWMPPView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,7 +37,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="V1F-KA-EKn" firstAttribute="centerY" secondItem="bcQ-R1-NdK" secondAttribute="centerY" id="OF2-Te-cyR"/>
-                        <constraint firstAttribute="height" constant="22" id="PHu-B8-NCa"/>
+                        <constraint firstAttribute="height" priority="750" constant="22" id="PHu-B8-NCa"/>
                         <constraint firstItem="V1F-KA-EKn" firstAttribute="centerX" secondItem="bcQ-R1-NdK" secondAttribute="centerX" id="Zvg-X0-928"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
